# scholarly_identifiers

./: Cargo.toml  LICENSE  LICENSE.txt  README.md
examples/: main.rs
src/: doi.rs  identifiers.rs  isbn.rs  lib.rs  orcid.rs  ror.rs  uri.rs
