[package]
name = "scholarly_identifiers"
authors = ["Joe Wass <joe@afandian.com>"]
description = "Library of identifier types for scholarly metadata."
readme = "README.md"
repository = "https://github.com/pardalotus/scholarly_identifiers"
license = "MIT"
keywords = ["identifiers", "metadata", "doi"]
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.0"
lazy_static = "1.5.0"
log = "0.4.22"
percent-encoding = "2.3.1"
regex = "1.11.0"
